--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="msapplication-config" content="image/icons/browserconfig.xml">
     <link rel="manifest" href="image/icons/manifest.json">
     <!-- icons -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EWCZHDCG9"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -40,69 +40,61 @@
     </script>
   </head>
   <body>
-        <div id="ask" class="container">
-            <div >
-                <h1 class = "header_text">Do you wanna go out with me?</h1>
-            </div>
-            <div class="gif_container">
-                <img src="image/ask.gif" alt="Cute animated illustration">
-            </div>
-            <div class = "buttons">
-                <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
-                <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
-            </div>
-            <video id="novideo" width="0" height="0" controls>
-                <source src="image/SadMoment.mp4" 
-                   type="video/mp4">
-            </video>
+    <div id="ask" class="container">
+        <div>
+            <h1 class="header_text">Do you wanna go out with me?</h1>
         </div>
-        <div id="ans" class="container">
-            <div >
-                <h1 class = "header_text">Yeeeyyyy!!</h1>
-            </div>
-            <div class="gif_container">
-                <img src="image/ans.gif" alt="Cute animated illustration">
-            </div>
-            <div class="gif_container qrimage">
-                <img src="image/siddharth_gabu_qr.png" onclick="window.open('https://www.instagram.com/siddharth_gabu/')" alt="Insta Profile QR code">
-            </div>
-            <video id="ansvideo" width="0" height="0" controls>
-                <source src="image/KidsCheering.mp4" 
-                   type="video/mp4">
-            </video>
+        <div class="gif_container">
+            <img src="image/ask.gif" alt="Cute animated illustration">
         </div>
-    </body> 
-    <script>
-
-        var debounce = function(fn, t = 1000) {
-            let timer;
-            return function(...args) {
-                clearTimeout(timer);
-                timer = setTimeout(() => fn(...args), t);
-            }
-        };
-
-
-        function playAudio()
-        {
-            document.getElementById('novideo').play();
+        <div class="buttons">
+            <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
+            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
+        </div>
+        <video id="novideo" width="0" height="0" controls>
+            <source src="image/SadMoment.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div id="ans" class="container">
+        <div>
+            <h1 class="header_text">Yeeeyyyy!!</h1>
+        </div>
+        <div class="gif_container">
+            <img src="image/ans.gif" alt="Cute animated illustration">
+        </div>
+        <video id="ansvideo" width="0" height="0" controls>
+            <source src="image/KidsCheering.mp4" type="video/mp4">
+        </video>
+    </div>
+  </body> 
+  <script>
+    var debounce = function(fn, t = 1000) {
+        let timer;
+        return function(...args) {
+            clearTimeout(timer);
+            timer = setTimeout(() => fn(...args), t);
         }
+    };
 
-        function nextPage() {
-            //window.location.href = "yes.html";
-            document.getElementById('ans').style.display = 'block';
-            document.getElementById('ask').style.display = 'none';
-            document.getElementById('novideo').pause();
-            document.getElementById('ansvideo').play();
-        }
+    function playAudio() {
+        document.getElementById('novideo').play();
+    }
 
-        function moveButton() {
-            var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth);
-            var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight);
-            document.getElementById('noButton').style.left = `${x}px`;
-            document.getElementById('noButton').style.top = `${y}px`;
-            playAudio();
-        }
+    function nextPage() {
+        document.getElementById('ans').style.display = 'block';
+        document.getElementById('ask').style.display = 'none';
+        document.getElementById('novideo').pause();
+        document.getElementById('ansvideo').play();
+    }
 
-    </script> 
+    function moveButton() {
+        var noButton = document.getElementById('noButton');
+        var x = Math.random() * (window.innerWidth - noButton.offsetWidth - 40); // Ajuste de margem
+        var y = Math.random() * (window.innerHeight - noButton.offsetHeight - 40); // Ajuste de margem
+        noButton.style.position = 'absolute';
+        noButton.style.left = `${x}px`;
+        noButton.style.top = `${y}px`;
+        playAudio();
+    }
+  </script>
 </html>
