correção da responsividade em telas menores

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
       gtag('config', 'G-3EWCZHDCG9');
     </script>
+    <!-- Importando a fonte Nunito do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="ask" class="container">
