tradução para português-br

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
   <body>
     <div id="ask" class="container">
         <div>
-            <h1 class="header_text">Do you wanna go out with me?</h1>
+            <h1 class="header_text">Aceita sair comigo?</h1>
         </div>
         <div class="gif_container">
             <img src="image/ask.gif" alt="Cute animated illustration">
         </div>
         <div class="buttons">
-            <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
-            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
+            <button class="btn" id="yesButton" onclick="nextPage()">Sim</button>
+            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">Não</button>
         </div>
         <video id="novideo" width="0" height="0" controls>
             <source src="image/SadMoment.mp4" type="video/mp4">
