--- a/index.html
+++ b/index.html
@@ -1,82 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR" dir="ltr">
-  <head>
+<head>
     <title>Aceita?</title>
     <meta charset="utf-8">
-    <meta name="author" content="SidPro"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <meta name="description" content="Do you wanna go out with me? Um site para convidar seu amor para um encontro pela plataforma de aprendizado online Collegeek."/>
-    <meta name="keywords" content="Do you wanna go out with me,A website to invite your lover for a date,Collegeek,Collegeek.com,learning programming,programming tutorial,tools,Live_DHTML,Converter,microprocessor"/>
     <link rel="stylesheet" href="./style.css">
-    <!-- icons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="image/icons/favicon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="image/icons/favicon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="image/icons/favicon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="image/icons/favicon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="image/icons/favicon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="image/icons/favicon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="image/icons/favicon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="image/icons/favicon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="image/icons/favicon-180x180.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="image/icons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="image/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="image/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="image/icons/favicon-192x192.png">
-    <link rel="shortcut icon" type="image/x-icon" href="image/icons/favicon.ico">
-    <link rel="icon" type="image/x-icon" href="image/icons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="image/icons/favicon-144x144.png">
-    <meta name="msapplication-config" content="image/icons/browserconfig.xml">
-    <link rel="manifest" href="image/icons/manifest.json">
-    <!-- icons -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EWCZHDCG9"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-3EWCZHDCG9');
-    </script>
-    <!-- Importando a fonte Nunito do Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
+</head>
+<body>
     <div id="ask" class="container">
-        <div>
-            <h1 class="header_text">Aceita sair comigo?</h1>
-        </div>
-        <div class="gif_container">
-            <img src="image/ask.gif" alt="Ilustração animada fofa">
-        </div>
+        <h1 class="header_text">Aceita sair comigo?</h1>
         <div class="buttons">
             <button class="btn" id="yesButton" onclick="nextPage()">Sim</button>
             <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">Não</button>
         </div>
-        <!-- Elementos de vídeo ocultos -->
         <video id="novideo" controls>
             <source src="image/SadMoment.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
     </div>
-    <div id="ans" class="container">
-        <div>
-            <h1 class="header_text">Yeeeyyyy!!</h1>
-        </div>
-        <div class="gif_container">
-            <img src="image/ans.gif" alt="Ilustração animada fofa">
-        </div>
+    <div id="ans" class="container" style="display: none;">
+        <h1 class="header_text">Yeeeyyyy!!</h1>
         <video id="ansvideo" controls>
             <source src="image/KidsCheering.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
     </div>
-  </body> 
-  <script>
-    // Inicializa o contador para o vídeo "Não"
-    let noButtonPlayCount = 0;
-    const maxPlays = 2; // Número máximo de reproduções permitidas
-
+</body>
+<script>
     var debounce = function(fn, t = 1000) {
         let timer;
         return function(...args) {
@@ -86,22 +36,9 @@
     };
 
     function playAudio() {
-        if (noButtonPlayCount < maxPlays) {
-            const noVideo = document.getElementById('novideo');
-            noVideo.currentTime = 0; // Reinicia o vídeo para que ele possa ser reproduzido novamente
-            noVideo.play();
-            noButtonPlayCount++;
-        } else {
-            console.log("Limite de reprodução do vídeo 'Não' atingido.");
-            // Opcional: Altere o comportamento do botão "Não" após atingir o limite
-            // Por exemplo, desabilite o botão ou altere seu texto
-            const noButton = document.getElementById('noButton');
-            noButton.disabled = true;
-            noButton.style.cursor = 'default';
-            noButton.style.opacity = '0.6'; // Indica que o botão está desabilitado
-            // Você também pode alterar o texto do botão
-            // noButton.textContent = "Não mais";
-        }
+        const noVideo = document.getElementById('novideo');
+        noVideo.currentTime = 0; // Reinicia o vídeo para que ele possa ser reproduzido novamente
+        noVideo.play();
     }
 
     function nextPage() {
@@ -120,5 +57,6 @@
         noButton.style.top = `${y}px`;
         playAudio();
     }
-  </script>
+</script>
+
 </html>
