--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-IN" dir="ltr">
   <head>
-    <title>Aceita?</title>
+    <title>Do you wanna go out with me?</title>
     <meta charset="utf-8">
     <meta name="author" content="SidPro"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
@@ -87,8 +87,8 @@
 
     function moveButton() {
         var noButton = document.getElementById('noButton');
-        var x = Math.random() * (window.innerWidth - noButton.offsetWidth - 40); // Ajuste de margem
-        var y = Math.random() * (window.innerHeight - noButton.offsetHeight - 40); // Ajuste de margem
+        var x = Math.random() * (window.innerWidth - noButton.offsetWidth - 40);
+        var y = Math.random() * (window.innerHeight - noButton.offsetHeight - 40);
         noButton.style.position = 'absolute';
         noButton.style.left = `${x}px`;
         noButton.style.top = `${y}px`;
@@ -96,4 +96,3 @@
     }
   </script>
 </html>
-
