--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <body>
     <div id="ask" class="container">
         <div>
-            <h1 class="header_text">Aceita sair comigo Sarah Dutra Fritzen?</h1>
+            <h1 class="header_text">Aceita sair comigo?</h1>
         </div>
         <div class="gif_container">
             <img src="image/ask.gif" alt="Cute animated illustration">
