mudança de texto

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   <body>
     <div id="ask" class="container">
         <div>
-            <h1 class="header_text">Aceita sair comigo?</h1>
+            <h1 class="header_text">QUER SAIR PARA TOMAR UM CHIMARRÃO???? </h1>
         </div>
         <div class="gif_container">
-            <img src="image/ask.gif" alt="Cute animated illustration">
+            <img src="image/chimarrao.png" alt="Cute animated illustration"  width="300" height="auto">  
         </div>
         <div class="buttons">
             <button class="btn" id="yesButton" onclick="nextPage()">Sim</button>
@@ -59,10 +59,10 @@
     </div>
     <div id="ans" class="container">
         <div>
-            <h1 class="header_text">ooiiiiiiiii!!</h1>
+            <h1 class="header_text">VAMOOOOOOOO</h1>
         </div>
         <div class="gif_container">
-            <img src="image/ans.gif" alt="Cute animated illustration">
+            <img src=image\stitch.png alt="Cute animated illustration">
         </div>
     </div>
   </body> 
